--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>IGN WMTS</title>
-    <link rel="stylesheet" href="node_modules/ol/ol.css">
-    <style>
-      .map {
-        width: 100%;
-        height: 400px;
-      }
-    </style>
+    <script type="module" src="map.js"></script>
   </head>
   <body>
-    <div id="map" class="map"></div>
-
-    <script type="module" src="main.js"></script>
+    <body id="itineraireMapBody">        
+      
+      <div id="itineraireMapContainer" class="view" data="{&quot;mapUri&quot;:&quot;data/sitytrail_-_3906976_-_les-geymonds.gpx&quot;,&quot;milestones&quot;:[{&quot;distance&quot;:0,&quot;lat&quot;:45.075020771987,&quot;lon&quot;:5.5591034889221},{&quot;distance&quot;:5,&quot;lat&quot;:45.076960321245,&quot;lon&quot;:5.5659055709839}]}"></div>        
+          </body>
   </body>
 </html>
